ingressWeb.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/backend-protocol: HTTP
      nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    name: zabbix-dashboard-ingress
    namespace: monitoring
    resourceVersion: "684968"
    uid: 7d4a1926-f214-418f-b26b-76f5d48f515e
  spec:
    rules:
    - host: my-zabbix.com
      http:
        paths:
        - backend:
            service:
              name: zabbix-web-nginx-mysql
              port:
                number: 8081
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - hostname: localhost
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
